--- a/weblog.html
+++ b/weblog.html
@@ -5,7 +5,7 @@
   </head>
 
   <body>
-  <hl><a href="2021-04-15_test.md">記事タイトル01</a></hl>
+  <hl><a href="./2021-04-15_test.md">記事タイトル01</a></hl>
   
   <hl>記事タイトル02</hl>
   
